@@ -3,6 +3,8 @@ package seng202.team0.gui;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
 import javafx.scene.layout.AnchorPane;
+import javafx.scene.layout.BorderPane;
+import javafx.stage.Modality;
 import seng202.team0.models.Wine;
 
 import java.awt.*;
@@ -18,7 +20,15 @@ import seng202.team0.repository.WineDAO;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import seng202.team0.services.WinePopupService;
 
+/**
+ * Controller class for the home page of the application.
+ * Handles the display of top-rated wines and interacts with the user interface elements.
+ * Provides functionality to display detailed information about selected wines in a popup.
+ *
+ * @author Luke Armstrong
+ */
 public class HomePageController {
 
     @FXML
@@ -57,15 +67,19 @@ public class HomePageController {
     @FXML
     private Label wine3;
 
-
     private Stage stage;
 
     private WineDAO wineDAO;
+
+    private WinePopupService wineService = new WinePopupService();
+
     /**
-     * Init method for HomePageController
-     * @param stage stage from NavBarController
+     * Initializes the HomePageController.
+     * Sets the stage and loads the top-rated wines to be displayed.
+     *
+     * @param stage The main stage passed from NavBarController.
      */
-    public void init(Stage stage){
+    public void init(Stage stage) {
         this.stage = stage;
         wineDAO = new WineDAO();
         if (wineDAO.getAll().size() >= 3) {
@@ -79,87 +93,90 @@ public class HomePageController {
         }
     }
 
-    public void displayWines(List<Wine> wines){
+    /**
+     * Displays the names of the top-rated wines on the labels.
+     *
+     * @param wines A list of the top-rated wines.
+     */
+    public void displayWines(List<Wine> wines) {
         wine1.setText(wines.get(0).getWineName());
         wine2.setText(wines.get(1).getWineName());
         wine3.setText(wines.get(2).getWineName());
     }
 
-    public void displayWinery(List<Wine> wines){
+    /**
+     * Displays the wineries of the top-rated wines on the description labels.
+     *
+     * @param wines A list of the top-rated wines.
+     */
+    public void displayWinery(List<Wine> wines) {
         desc1.setText("Winery: " + wines.get(0).getWineryString());
         desc2.setText("Winery: " + wines.get(1).getWineryString());
         desc3.setText("Winery: " + wines.get(2).getWineryString());
     }
 
-    public void displayRatings(List<Wine> wines){
+    /**
+     * Displays the ratings of the top-rated wines on the rating labels.
+     *
+     * @param wines A list of the top-rated wines.
+     */
+    public void displayRatings(List<Wine> wines) {
         rating1.setText(wines.get(0).getScore() + " / 100");
         rating2.setText(wines.get(1).getScore() + " / 100");
         rating3.setText(wines.get(2).getScore() + " / 100");
     }
 
+    /**
+     * Sets the images of the top-rated wines based on their color.
+     *
+     * @param wines A list of the top-rated wines.
+     */
     public void setImage(List<Wine> wines) {
         List<ImageView> imageViews = Arrays.asList(imageView1, imageView2, imageView3);
-        for (int i=0; i < 3; i++) {
-            System.out.println(wines.get(i).getWineName());
-            String imagePath;
-            switch(wines.get(i).getColor()) {
-                case "Red":
-                    imagePath = "/images/redwine.jpeg";
-                    break;
-                case "White":
-                    imagePath = "/images/whitewine.jpeg";
-                    break;
-                case "Ros�":
-                    imagePath = "/images/rose.jpeg";
-                    break;
-                default:
-                    imagePath = "/images/defaultwine.jpeg";
-            }
-            Image image = new Image(getClass().getResourceAsStream(imagePath));
+        for (int i = 0; i < 3; i++) {
+            Image image = wineService.getImage(wines.get(i));
             ImageView imageView = imageViews.get(i);
             imageView.setImage(image);
         }
     }
 
+
+
+    /**
+     * Event handler for pressing the first wine label.
+     * Fetches the first top-rated wine and displays its details in a popup.
+     */
     @FXML
     void wine1Pressed() {
-        List<Wine> wines = wineDAO.getAll();
-        winePressed(wines.get(0));
+        List<Wine> wines = wineDAO.getTopRated();
+        Wine wine = wines.getFirst();
+        Image image = wineService.getImage(wine);
+        wineService.winePressed(wine, image, rating1);
     }
 
+    /**
+     * Event handler for pressing the second wine label.
+     * Fetches the second top-rated wine and displays its details in a popup.
+     */
     @FXML
     void wine2Pressed() {
-        List<Wine> wines = wineDAO.getAll();
-        winePressed(wines.get(1));
+        List<Wine> wines = wineDAO.getTopRated();
+        Wine wine = wines.get(1);
+        Image image = wineService.getImage(wine);
+        wineService.winePressed(wine, image, rating1);
     }
 
+    /**
+     * Event handler for pressing the third wine label.
+     * Fetches the third top-rated wine and displays its details in a popup.
+     */
     @FXML
     void wine3Pressed() {
-        List<Wine> wines = wineDAO.getAll();
-        winePressed(wines.get(2));
+        List<Wine> wines = wineDAO.getTopRated();
+        Wine wine = wines.get(2);
+        Image image = wineService.getImage(wine);
+        wineService.winePressed(wine, image, rating1);
     }
 
-
-    void winePressed(Wine wine) {
-        try {
-            // load a new fxml file
-            FXMLLoader newStageLoader = new FXMLLoader(getClass().getResource("/fxml/wine_popup.fxml"));
-            AnchorPane root = newStageLoader.load();
-
-            winePopupController controller = newStageLoader.getController();
-            controller.init(wine);
-            Scene modalScene = new Scene(root);
-            Stage modalStage = new Stage();
-            modalStage.setScene(modalScene);
-            modalStage.setWidth(600);
-            modalStage.setHeight(400);
-            modalStage.setResizable(false);
-            modalStage.setTitle("Wine Popup");
-            modalStage.showAndWait();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
-    }
 
 }
